--- a/execicios/ex.023/tabela001.html
+++ b/execicios/ex.023/tabela001.html
@@ -12,20 +12,19 @@
 
     table {
       width: 400px;
+      height: 400px;
       border-collapse: collapse;
-    }
 
-    tr.linha {
-      background-color: aquamarine;
     }
 
     td {
       border: 1px solid black;
       padding: 8px;
-    }
+      /*aliamento horiziontal*/
+      text-align: center;
+      /*alinhamento vertical*/
+      vertical-align: middle;
 
-    td.dado {
-      background-color: blueviolet;
     }
   </style>
 </head>
@@ -46,7 +45,7 @@
       <td>C1</td>
     </tr>
 
-    <tr class="linha">
+    <tr>
       <td>A2</td>
       <td>B2</td>
       <td>C2</td>
@@ -60,7 +59,7 @@
 
     <tr>
       <td>A4</td>
-      <td class="dado">B4</td>
+      <td>B4</td>
       <td>C4</td>
     </tr>
   </table>
