--- a/execicios/ex.023/tabela002.html
+++ b/execicios/ex.023/tabela002.html
@@ -15,6 +15,14 @@
       border-collapse: collapse;
     }
 
+    caption {
+      font-size: 1.5em;
+      font-weight: bold;
+      padding: 10px;
+      background-color: lightgray;
+
+    }
+
     thead,
     tfoot {
       background-color: gray;
@@ -46,6 +54,7 @@
         TR,TD,TH
   -->
   <table>
+    <caption>População do Brasil</caption>
     <thead>
       <tr>
         <th>Estado</th>
